FIGS Gain: $ 0.63 Win %: 60.00 in 5 days with algo TB3_HS_QM_OB4_OS4_CB5_CS5_TS
FIGS Gain: $ 6.88 Win %: 66.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5
FIGS Gain: $ -9.18 Win %: 16.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_TR_QP_DB30
FIGS Gain: $ 5.62 Win %: 66.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_RV_TR_DB30
FIGS Gain: $ -1.01 Win %: 16.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_RV_AV_DB30
FIGS Gain: $ 8.03 Win %: 66.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_RV_AL_DB30
FIGS Gain: $ -13.37 Win %: 16.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_RV_QP_DB30
FIGS Gain: $ 6.2 Win %: 66.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_HM_TR_DB30
FIGS Gain: $ 3.07 Win %: 50.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_HM_AV_DB30
FIGS Gain: $ -12.25 Win %: 16.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_HM_QP_DB30
FIGS Gain: $ 4.22 Win %: 50.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_IT_QL_DB30
FIGS Gain: $ -11.79 Win %: 16.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_IT_QP_DB30
FIGS Gain: $ 4.88 Win %: 66.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_TR_IR5
FIGS Gain: $ 2.02 Win %: 66.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_TR_TS
FIGS Gain: $ -12.44 Win %: 16.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_TR_QP
FIGS Gain: $ -12.44 Win %: 16.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_QP_IR5
FIGS Gain: $ 4.39 Win %: 66.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_RV_TR
FIGS Gain: $ 2.93 Win %: 50.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_RV_AV
FIGS Gain: $ 6.81 Win %: 50.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_RV_AL
FIGS Gain: $ -15.32 Win %: 16.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_RV_QP
FIGS Gain: $ 5.98 Win %: 66.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_HM_TR
FIGS Gain: $ 3.52 Win %: 33.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_HM_AV
FIGS Gain: $ 5.39 Win %: 50.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_HM_AL
FIGS Gain: $ -14.31 Win %: 16.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_HM_QP
FIGS Gain: $ 4.66 Win %: 66.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_IT_QL
FIGS Gain: $ -13.74 Win %: 16.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_IT_QP
FIGS Gain: $ 1.1 Win %: 66.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_IT_TS
FIGS Gain: $ -5.94 Win %: 33.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_AO_AC
FIGS Gain: $ -1.48 Win %: 66.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_QP_PM
FIGS Gain: $ 0.75 Win %: 50.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_AV_TS
FIGS Gain: $ 1.25 Win %: 50.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_AL_TS
FIGS Gain: $ 7.29 Win %: 66.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_RV
FIGS Gain: $ 7.05 Win %: 66.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_IR5
FIGS Gain: $ 5.01 Win %: 66.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_TR
FIGS Gain: $ 2.93 Win %: 50.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_AV
FIGS Gain: $ 6.81 Win %: 50.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_AL
FIGS Gain: $ 4.86 Win %: 50.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_VI
FIGS Gain: $ 6.67 Win %: 66.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_LI
FIGS Gain: $ -13.74 Win %: 16.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_QP
FIGS Gain: $ 6.17 Win %: 66.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_HM
FIGS Gain: $ 3.2 Win %: 50.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_SS
FIGS Gain: $ 6.66 Win %: 66.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_QL
FIGS Gain: $ 7.95 Win %: 66.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_DB30
FIGS Gain: $ 7.5 Win %: 66.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_AO
FIGS Gain: $ -2.77 Win %: 33.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_AC
FIGS Gain: $ 4.88 Win %: 66.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_IT
FIGS Gain: $ -3.17 Win %: 66.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_PM
FIGS Gain: $ 1.3 Win %: 66.00 in 6 days with algo TB1_HL_HI_QM_OB2_OS2_CB5_CS5_TS
FIGS Gain: $ -29.03 Win %: 16.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_TR_QP_DB30
FIGS Gain: $ -4.14 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_RV_TR_DB30
FIGS Gain: $ -1.08 Win %: 33.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_RV_AV_DB30
FIGS Gain: $ -8.45 Win %: 16.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_RV_AL_DB30
FIGS Gain: $ -63.74 Win %: 0 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_RV_QP_DB30
FIGS Gain: $ -4.45 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_HM_TR_DB30
FIGS Gain: $ -2.38 Win %: 33.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_HM_AV_DB30
FIGS Gain: $ -55.7 Win %: 0 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_HM_QP_DB30
FIGS Gain: $ -2.07 Win %: 16.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_IT_QL_DB30
FIGS Gain: $ -61.64 Win %: 0 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_IT_QP_DB30
FIGS Gain: $ -8.18 Win %: 33.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_TR_IR5
FIGS Gain: $ -9.21 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_TR_TS
FIGS Gain: $ -34.78 Win %: 16.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_TR_QP
FIGS Gain: $ -72.03 Win %: 0 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_QP_IR5
FIGS Gain: $ -6.73 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_RV_TR
FIGS Gain: $ 0.5 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_RV_AV
FIGS Gain: $ -1.76 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_RV_AL
FIGS Gain: $ -74.16 Win %: 0 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_RV_QP
FIGS Gain: $ -0.36 Win %: 66.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_HM_TR
FIGS Gain: $ -0.41 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_HM_AV
FIGS Gain: $ -2.88 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_HM_AL
FIGS Gain: $ -64.81 Win %: 0 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_HM_QP
FIGS Gain: $ 1.77 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_IT_QL
FIGS Gain: $ -72.43 Win %: 0 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_IT_QP
FIGS Gain: $ -12.07 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_IT_TS
FIGS Gain: $ -8.13 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_AO_AC
FIGS Gain: $ -21.64 Win %: 16.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_QP_PM
FIGS Gain: $ -3.51 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_AV_TS
FIGS Gain: $ -4.68 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_AL_TS
FIGS Gain: $ -9.92 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_RV
FIGS Gain: $ -24.57 Win %: 16.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_IR5
FIGS Gain: $ -6.39 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_TR
FIGS Gain: $ 0.49 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_AV
FIGS Gain: $ -1.76 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_AL
FIGS Gain: $ -5.09 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_VI
FIGS Gain: $ -7.91 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_LI
FIGS Gain: $ -61.07 Win %: 16.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_QP
FIGS Gain: $ -9.04 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_HM
FIGS Gain: $ -4.36 Win %: 33.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_SS
FIGS Gain: $ 4.14 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_QL
FIGS Gain: $ -13.11 Win %: 33.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_DB30
FIGS Gain: $ -8.13 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_AO
FIGS Gain: $ -1.27 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_AC
FIGS Gain: $ -8.95 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_IT
FIGS Gain: $ 3.49 Win %: 66.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_PM
FIGS Gain: $ -6.64 Win %: 50.00 in 6 days with algo TB1_CC_QM_OB2_OS2_CB3_CS3_TS
FIGS Gain: $ -13.59 Win %: 16.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_TR_QP_DB8
FIGS Gain: $ 3.4 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_RV_TR_DB8
FIGS Gain: $ -2.3 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_RV_AV_DB8
FIGS Gain: $ 1.13 Win %: 66.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_RV_AL_DB8
FIGS Gain: $ -21.09 Win %: 16.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_RV_QP_DB8
FIGS Gain: $ 3.13 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_HM_TR_DB8
FIGS Gain: $ -2.02 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_HM_AV_DB8
FIGS Gain: $ -20.95 Win %: 16.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_HM_QP_DB8
FIGS Gain: $ 0.68 Win %: 33.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_IT_QL_DB8
FIGS Gain: $ -20.68 Win %: 16.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_IT_QP_DB8
FIGS Gain: $ -0.95 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_TR_IR2
FIGS Gain: $ -2.02 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_TR_TS
FIGS Gain: $ -14.97 Win %: 16.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_TR_QP
FIGS Gain: $ -21.1 Win %: 33.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_QP_IR2
FIGS Gain: $ 1.66 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_RV_TR
FIGS Gain: $ 3.2 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_RV_AV
FIGS Gain: $ 3.87 Win %: 66.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_RV_AL
FIGS Gain: $ -25.27 Win %: 16.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_RV_QP
FIGS Gain: $ 1.29 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_HM_TR
FIGS Gain: $ 3.48 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_HM_AV
FIGS Gain: $ 3.82 Win %: 66.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_HM_AL
FIGS Gain: $ -24.63 Win %: 16.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_HM_QP
FIGS Gain: $ 3.37 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_IT_QL
FIGS Gain: $ -24.36 Win %: 16.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_IT_QP
FIGS Gain: $ -5.14 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_IT_TS
FIGS Gain: $ 0.37 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_AO_AC
FIGS Gain: $ -10.54 Win %: 16.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_QP_PM
FIGS Gain: $ -0.13 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_AV_TS
FIGS Gain: $ 2.15 Win %: 66.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_AL_TS
FIGS Gain: $ 0.47 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_RV
FIGS Gain: $ 0.76 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_IR2
FIGS Gain: $ 1.56 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_TR
FIGS Gain: $ 3.2 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_AV
FIGS Gain: $ 4.09 Win %: 66.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_AL
FIGS Gain: $ 1.21 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_VI
FIGS Gain: $ 2.66 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_LI
FIGS Gain: $ -24.36 Win %: 16.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_QP
FIGS Gain: $ 0.1 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_HM
FIGS Gain: $ -0.42 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_SS
FIGS Gain: $ 0.39 Win %: 33.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_QL
FIGS Gain: $ 0.09 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_DB8
FIGS Gain: $ 0.37 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_AO
FIGS Gain: $ -5.94 Win %: 33.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_AC
FIGS Gain: $ -1.42 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_IT
FIGS Gain: $ 0.65 Win %: 33.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_PM
FIGS Gain: $ -4.41 Win %: 50.00 in 6 days with algo TB4_OC_QM_OB2_OS2_CB1_CS1_TS
FIGS Gain: $ -11.35 Win %: 16.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_TR_QP_DB15
FIGS Gain: $ 0.05 Win %: 50.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_RV_TR_DB15
FIGS Gain: $ -0.98 Win %: 16.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AV_DB15
FIGS Gain: $ 2.68 Win %: 50.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AL_DB15
FIGS Gain: $ -9.88 Win %: 0 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_RV_QP_DB15
FIGS Gain: $ -0.89 Win %: 33.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_HM_TR_DB15
FIGS Gain: $ 0.21 Win %: 33.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AV_DB15
FIGS Gain: $ -4.27 Win %: 33.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_HM_QP_DB15
FIGS Gain: $ 1.11 Win %: 50.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QL_DB15
FIGS Gain: $ -5.08 Win %: 33.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QP_DB15
FIGS Gain: $ 2.61 Win %: 66.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_TR_IR4
FIGS Gain: $ 1.09 Win %: 66.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_TR_TS
FIGS Gain: $ -12.33 Win %: 0 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_TR_QP
FIGS Gain: $ -3.07 Win %: 50.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_QP_IR4
FIGS Gain: $ 3.68 Win %: 66.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_RV_TR
FIGS Gain: $ 1.52 Win %: 66.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AV
FIGS Gain: $ 4.99 Win %: 66.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AL
FIGS Gain: $ -7.99 Win %: 33.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_RV_QP
FIGS Gain: $ -0.03 Win %: 33.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_HM_TR
FIGS Gain: $ 1.28 Win %: 66.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AV
FIGS Gain: $ 4.87 Win %: 66.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AL
FIGS Gain: $ -7.28 Win %: 16.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_HM_QP
FIGS Gain: $ 0.98 Win %: 50.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QL
FIGS Gain: $ -5.5 Win %: 16.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QP
FIGS Gain: $ 0.81 Win %: 66.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_IT_TS
FIGS Gain: $ 0.71 Win %: 66.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_AO_AC
FIGS Gain: $ -1.69 Win %: 33.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_QP_PM
FIGS Gain: $ -0.25 Win %: 66.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_AV_TS
FIGS Gain: $ 1.09 Win %: 66.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_AL_TS
FIGS Gain: $ 5.51 Win %: 66.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_RV
FIGS Gain: $ 6.2 Win %: 66.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_IR4
FIGS Gain: $ 0.69 Win %: 50.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_TR
FIGS Gain: $ 1.27 Win %: 66.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_AV
FIGS Gain: $ 6.41 Win %: 66.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_AL
FIGS Gain: $ 3.6 Win %: 66.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_VI
FIGS Gain: $ 2.65 Win %: 66.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_LI
FIGS Gain: $ -14.63 Win %: 0 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_QP
FIGS Gain: $ 3.85 Win %: 50.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_HM
FIGS Gain: $ 5.16 Win %: 66.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_SS
FIGS Gain: $ 4.4 Win %: 50.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_QL
FIGS Gain: $ 2.48 Win %: 50.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_DB15
FIGS Gain: $ 3.96 Win %: 66.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_AO
FIGS Gain: $ 5.15 Win %: 66.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_AC
FIGS Gain: $ 2.37 Win %: 66.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_IT
FIGS Gain: $ -3.09 Win %: 66.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_PM
FIGS Gain: $ 1.09 Win %: 66.00 in 6 days with algo TB2_HL_HS_QM_OB3_OS3_CB5_CS5_TS
FIGS Gain: $ -1.46 Win %: 33.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_TR_QP_DB15
FIGS Gain: $ 1.98 Win %: 50.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_TR_DB15
FIGS Gain: $ -4.59 Win %: 16.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_AV_DB15
FIGS Gain: $ 1.73 Win %: 33.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_AL_DB15
FIGS Gain: $ -4.2 Win %: 0 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_QP_DB15
FIGS Gain: $ 2.69 Win %: 66.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_HM_TR_DB15
FIGS Gain: $ -0.02 Win %: 33.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_HM_AV_DB15
FIGS Gain: $ -1.37 Win %: 33.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_HM_QP_DB15
FIGS Gain: $ 1.51 Win %: 66.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_IT_QL_DB15
FIGS Gain: $ -1.42 Win %: 33.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_IT_QP_DB15
FIGS Gain: $ 2.59 Win %: 50.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_TR_IR4
FIGS Gain: $ 2.66 Win %: 83.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_TR_TS
FIGS Gain: $ -2.04 Win %: 16.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_TR_QP
FIGS Gain: $ -1.03 Win %: 33.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_QP_IR4
FIGS Gain: $ 1.82 Win %: 66.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_TR
FIGS Gain: $ 0.17 Win %: 50.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_AV
FIGS Gain: $ 2.24 Win %: 66.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_AL
FIGS Gain: $ -4.25 Win %: 16.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_QP
FIGS Gain: $ 5.7 Win %: 66.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_HM_TR
FIGS Gain: $ 3.39 Win %: 66.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_HM_AV
FIGS Gain: $ 6.46 Win %: 83.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_HM_AL
FIGS Gain: $ -0.01 Win %: 33.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_HM_QP
FIGS Gain: $ 2.64 Win %: 83.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_IT_QL
FIGS Gain: $ -0.06 Win %: 33.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_IT_QP
FIGS Gain: $ 3.86 Win %: 100.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_IT_TS
FIGS Gain: $ 1.71 Win %: 66.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_AO_AC
FIGS Gain: $ -0.39 Win %: 66.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_QP_PM
FIGS Gain: $ 3.31 Win %: 66.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_AV_TS
FIGS Gain: $ 1.73 Win %: 83.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_AL_TS
FIGS Gain: $ 2.4 Win %: 50.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV
FIGS Gain: $ 3.03 Win %: 50.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_IR4
FIGS Gain: $ 4.83 Win %: 66.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_TR
FIGS Gain: $ -0.51 Win %: 33.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_AV
FIGS Gain: $ 4.64 Win %: 83.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_AL
FIGS Gain: $ 4.6 Win %: 66.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_VI
FIGS Gain: $ 3.96 Win %: 66.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_LI
FIGS Gain: $ -0.06 Win %: 33.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_QP
FIGS Gain: $ 6.09 Win %: 66.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_HM
FIGS Gain: $ 3.94 Win %: 66.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_SS
FIGS Gain: $ 4.95 Win %: 66.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_QL
FIGS Gain: $ 1.06 Win %: 50.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_DB15
FIGS Gain: $ 4.68 Win %: 83.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_AO
FIGS Gain: $ 1.39 Win %: 50.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_AC
FIGS Gain: $ 1.94 Win %: 83.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_IT
FIGS Gain: $ 3.18 Win %: 100.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_PM
FIGS Gain: $ 3.26 Win %: 83.00 in 6 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_TS
