GIS Gain: $ 0.35 Win %: 100.00 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5
GIS Gain: $ -0.26 Win %: 0 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_RV
GIS Gain: $ -0.33 Win %: 0 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_IR1
GIS Gain: $ 0.27 Win %: 100.00 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_TR
GIS Gain: $ -0.57 Win %: 0 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_AV
GIS Gain: $ -0.33 Win %: 0 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_VI
GIS Gain: $ -0.61 Win %: 0 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_AL
GIS Gain: $ 8.67362e-18 Win %: 0 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_LI
GIS Gain: $ 1.02 Win %: 100.00 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_QP
GIS Gain: $ 9.36751e-17 Win %: 0 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_HM
GIS Gain: $ 0.35 Win %: 100.00 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_SS
GIS Gain: $ 0.35 Win %: 100.00 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_QL
GIS Gain: $ 0.35 Win %: 100.00 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_DB6
GIS Gain: $ -0.2 Win %: 0 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_TR_IR1
GIS Gain: $ 1.02 Win %: 100.00 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_TR_QP
GIS Gain: $ -0.08 Win %: 0 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_QP_IR1
GIS Gain: $ -0.41 Win %: 0 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_RV_TR
GIS Gain: $ -0.11 Win %: 0 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_RV_TR_DB1
GIS Gain: $ -1.41 Win %: 0 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_RV_AV
GIS Gain: $ -0.96 Win %: 0 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_RV_AL
GIS Gain: $ 0.23 Win %: 100.00 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_RV_QP
GIS Gain: $ 0.51 Win %: 100.00 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_HM_TR
GIS Gain: $ 1.05 Win %: 100.00 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_HM_AV
GIS Gain: $ 1 Win %: 100.00 in 1 days with algo TB5_OO_QM_OB5_OS5_CB5_CS5_HM_QP
GIS Gain: $ -0.26 Win %: 0 in 1 days with algo TB5_CC_QM_OB2_OS2_CB5_CS5_RV
GIS Gain: $ -0.33 Win %: 0 in 1 days with algo TB5_CC_QM_OB2_OS2_CB5_CS5_IR1
GIS Gain: $ 0.27 Win %: 100.00 in 1 days with algo TB5_CC_QM_OB2_OS2_CB5_CS5_TR
GIS Gain: $ -1.22 Win %: 0 in 1 days with algo TB5_CC_QM_OB2_OS2_CB5_CS5_AV
GIS Gain: $ -0.33 Win %: 0 in 1 days with algo TB5_CC_QM_OB2_OS2_CB5_CS5_VI
GIS Gain: $ -0.61 Win %: 0 in 1 days with algo TB5_CC_QM_OB2_OS2_CB5_CS5_AL
GIS Gain: $ -0.2 Win %: 0 in 1 days with algo TB5_CC_QM_OB2_OS2_CB5_CS5_LI
GIS Gain: $ 1.02 Win %: 100.00 in 1 days with algo TB5_CC_QM_OB2_OS2_CB5_CS5_QP
GIS Gain: $ 1.01 Win %: 100.00 in 1 days with algo TB5_CC_QM_OB2_OS2_CB5_CS5_HM
GIS Gain: $ 0.35 Win %: 100.00 in 1 days with algo TB5_CC_QM_OB2_OS2_CB5_CS5_SS
GIS Gain: $ 0.35 Win %: 100.00 in 1 days with algo TB5_CC_QM_OB2_OS2_CB5_CS5_QL
GIS Gain: $ 0.35 Win %: 100.00 in 1 days with algo TB5_CC_QM_OB2_OS2_CB5_CS5_DB6
GIS Gain: $ -0.99 Win %: 0 in 1 days with algo TB5_CC_QM_OB2_OS2_CB5_CS5_TR_IR1
GIS Gain: $ 1.02 Win %: 100.00 in 1 days with algo TB5_CC_QM_OB2_OS2_CB5_CS5_TR_QP
GIS Gain: $ -0.08 Win %: 0 in 1 days with algo TB5_CC_QM_OB2_OS2_CB5_CS5_QP_IR1
GIS Gain: $ -0.11 Win %: 0 in 1 days with algo TB5_CC_QM_OB2_OS2_CB5_CS5_RV_TR
GIS Gain: $ -0.11 Win %: 0 in 1 days with algo TB5_CC_QM_OB2_OS2_CB5_CS5_RV_TR_DB1
GIS Gain: $ -1.41 Win %: 0 in 1 days with algo TB5_CC_QM_OB2_OS2_CB5_CS5_RV_AV
GIS Gain: $ -0.96 Win %: 0 in 1 days with algo TB5_CC_QM_OB2_OS2_CB5_CS5_RV_AL
GIS Gain: $ 0.23 Win %: 100.00 in 1 days with algo TB5_CC_QM_OB2_OS2_CB5_CS5_RV_QP
GIS Gain: $ 0.51 Win %: 100.00 in 1 days with algo TB5_CC_QM_OB2_OS2_CB5_CS5_HM_TR
GIS Gain: $ 1.05 Win %: 100.00 in 1 days with algo TB5_CC_QM_OB2_OS2_CB5_CS5_HM_AV
GIS Gain: $ -0.8 Win %: 0 in 1 days with algo TB5_CC_QM_OB2_OS2_CB5_CS5_HM_QP
GIS Gain: $ -1.45 Win %: 0 in 1 days with algo TB4_HI_QM_OB3_OS3_CB1_CS1_RV
GIS Gain: $ -1.1 Win %: 0 in 1 days with algo TB4_HI_QM_OB3_OS3_CB1_CS1_IR2
GIS Gain: $ -0.3 Win %: 0 in 1 days with algo TB4_HI_QM_OB3_OS3_CB1_CS1_TR
GIS Gain: $ -0.54 Win %: 0 in 1 days with algo TB4_HI_QM_OB3_OS3_CB1_CS1_AV
GIS Gain: $ -0.21 Win %: 0 in 1 days with algo TB4_HI_QM_OB3_OS3_CB1_CS1_VI
GIS Gain: $ -0.23 Win %: 0 in 1 days with algo TB4_HI_QM_OB3_OS3_CB1_CS1_AL
GIS Gain: $ -0.4 Win %: 0 in 1 days with algo TB4_HI_QM_OB3_OS3_CB1_CS1_LI
GIS Gain: $ -1.62 Win %: 0 in 1 days with algo TB4_HI_QM_OB3_OS3_CB1_CS1_QP
GIS Gain: $ -1.41 Win %: 0 in 1 days with algo TB4_HI_QM_OB3_OS3_CB1_CS1_HM
GIS Gain: $ -1.54 Win %: 0 in 1 days with algo TB4_HI_QM_OB3_OS3_CB1_CS1_SS
GIS Gain: $ -1.37 Win %: 0 in 1 days with algo TB4_HI_QM_OB3_OS3_CB1_CS1_QL
GIS Gain: $ -1.54 Win %: 0 in 1 days with algo TB4_HI_QM_OB3_OS3_CB1_CS1_DB8
GIS Gain: $ 0.31 Win %: 100.00 in 1 days with algo TB4_HI_QM_OB3_OS3_CB1_CS1_TR_IR2
GIS Gain: $ -0.43 Win %: 0 in 1 days with algo TB4_HI_QM_OB3_OS3_CB1_CS1_TR_QP
GIS Gain: $ -0.35 Win %: 0 in 1 days with algo TB4_HI_QM_OB3_OS3_CB1_CS1_QP_IR2
GIS Gain: $ -0.47 Win %: 0 in 1 days with algo TB4_HI_QM_OB3_OS3_CB1_CS1_RV_TR
GIS Gain: $ -0.3 Win %: 0 in 1 days with algo TB4_HI_QM_OB3_OS3_CB1_CS1_RV_TR_DB2
GIS Gain: $ -1.69 Win %: 0 in 1 days with algo TB4_HI_QM_OB3_OS3_CB1_CS1_RV_AV
GIS Gain: $ -0.78 Win %: 0 in 1 days with algo TB4_HI_QM_OB3_OS3_CB1_CS1_RV_AL
GIS Gain: $ -1.53 Win %: 0 in 1 days with algo TB4_HI_QM_OB3_OS3_CB1_CS1_RV_QP
GIS Gain: $ -0.54 Win %: 0 in 1 days with algo TB4_HI_QM_OB3_OS3_CB1_CS1_HM_TR
GIS Gain: $ -0.77 Win %: 0 in 1 days with algo TB4_HI_QM_OB3_OS3_CB1_CS1_HM_AV
GIS Gain: $ -1.49 Win %: 0 in 1 days with algo TB4_HI_QM_OB3_OS3_CB1_CS1_HM_QP
GIS Gain: $ -0.04 Win %: 0 in 1 days with algo TB1_CC_QM_OB1_OS1_CB3_CS3_RV
GIS Gain: $ -0.73 Win %: 0 in 1 days with algo TB1_CC_QM_OB1_OS1_CB3_CS3_IR5
GIS Gain: $ 1.16 Win %: 100.00 in 1 days with algo TB1_CC_QM_OB1_OS1_CB3_CS3_TR
GIS Gain: $ 0.05 Win %: 100.00 in 1 days with algo TB1_CC_QM_OB1_OS1_CB3_CS3_AV
GIS Gain: $ 0.38 Win %: 100.00 in 1 days with algo TB1_CC_QM_OB1_OS1_CB3_CS3_VI
GIS Gain: $ -0.08 Win %: 0 in 1 days with algo TB1_CC_QM_OB1_OS1_CB3_CS3_AL
GIS Gain: $ 0.2 Win %: 100.00 in 1 days with algo TB1_CC_QM_OB1_OS1_CB3_CS3_LI
GIS Gain: $ -0.64 Win %: 0 in 1 days with algo TB1_CC_QM_OB1_OS1_CB3_CS3_QP
GIS Gain: $ 0.19 Win %: 100.00 in 1 days with algo TB1_CC_QM_OB1_OS1_CB3_CS3_HM
GIS Gain: $ -0.02 Win %: 0 in 1 days with algo TB1_CC_QM_OB1_OS1_CB3_CS3_SS
GIS Gain: $ 0.15 Win %: 100.00 in 1 days with algo TB1_CC_QM_OB1_OS1_CB3_CS3_QL
GIS Gain: $ 0.15 Win %: 100.00 in 1 days with algo TB1_CC_QM_OB1_OS1_CB3_CS3_DB30
GIS Gain: $ 0.35 Win %: 100.00 in 1 days with algo TB1_CC_QM_OB1_OS1_CB3_CS3_TR_IR5
GIS Gain: $ 0.73 Win %: 100.00 in 1 days with algo TB1_CC_QM_OB1_OS1_CB3_CS3_TR_QP
GIS Gain: $ 0.04 Win %: 100.00 in 1 days with algo TB1_CC_QM_OB1_OS1_CB3_CS3_QP_IR5
GIS Gain: $ 0.86 Win %: 100.00 in 1 days with algo TB1_CC_QM_OB1_OS1_CB3_CS3_RV_TR
GIS Gain: $ 0.86 Win %: 100.00 in 1 days with algo TB1_CC_QM_OB1_OS1_CB3_CS3_RV_TR_DB5
GIS Gain: $ -1.12 Win %: 0 in 1 days with algo TB1_CC_QM_OB1_OS1_CB3_CS3_RV_AV
GIS Gain: $ -0.15 Win %: 0 in 1 days with algo TB1_CC_QM_OB1_OS1_CB3_CS3_RV_AL
GIS Gain: $ -0.84 Win %: 0 in 1 days with algo TB1_CC_QM_OB1_OS1_CB3_CS3_RV_QP
GIS Gain: $ 1.14 Win %: 100.00 in 1 days with algo TB1_CC_QM_OB1_OS1_CB3_CS3_HM_TR
GIS Gain: $ 0.91 Win %: 100.00 in 1 days with algo TB1_CC_QM_OB1_OS1_CB3_CS3_HM_AV
GIS Gain: $ -0.48 Win %: 0 in 1 days with algo TB1_CC_QM_OB1_OS1_CB3_CS3_HM_QP
